...
        ) {
            if (isBlogSearchLayoutList) {
                Icon(
                    modifier = Modifier
                        .size(30.dp),
                    imageVector = Icons.Default.GridOn,
                    contentDescription = "grid icon",
                    tint = Color.Black

                )
            }
            else{
                Icon(
                    modifier = Modifier
                        .size(40.dp),
                    imageVector = Icons.Default.List,
                    contentDescription = "list icon",
                    tint = Color.Black

                )
            }

        }
...
