package com.example.intership_scrapproject_android.core.util

object TestTags {
    const val RowButton = "RowButton"
    const val GirdButton = "GirdButton"
}