package com.example.intership_scrapproject_android.util

object TestTags {
    //blogSearchTest
    const val blogSearchTextField = "blogSearchTextField"
    const val blogSearchLazyColumn = "blogSearchLazyColumn"
    const val blogSearchLazyVerticalGrid = "blogSearchLazyVerticalGrid"
    const val blogSearchErrorSnackBar = "blogSearchErrorSnackBar"
    const val blogSearchResultNullText = "blogSearchResultNullText"
    const val insertBlogSearchQueryText = "insertBlogSearchQueryText"
    const val blogSearchItemTitle = "blogSearchItemTitle"
    const val blogSearchItemLinkIcon = "blogSearchItemLinkIcon"
    //blogSearchDetailTest
    const val blogSearchGridItemBox = "blogSearchGridItemBox"
    const val blogSearchListItemBox = "blogSearchListItemBox"
    const val blogSearchDetailItem = "blogSearchDetailItem"
    const val blogSearchDetailKeywordText = "blogSearchDetailKeywordText"
    const val blogSearchDetailBlogTitle = "blogSearchDetailBlogTitle"
    //blogScrapTest
    const val blogScrapButton = "blogScrapButton"
    const val blogScrapItem = "blogScrapItem"
    const val blogScrapItemKeyword = "blogScrapItemKeyword"
    const val blogScrapItemTitle = "blogScrapItemTitle"
    const val blogScrapItemDescription = "blogScrapItemDescription"
    const val blogScrapSaveButton = "blogScrapSaveButton"
    //postTest
    const val blogSearchBottomButton = "blogSearchBottomButton"
    const val postBottomButton = "postBottomButton"
    const val postLazyColumn = "postLazyColumn"
    const val postSortIconButton = "postSortIconButton"
    const val postOrderSection = "postOrderSection"
    const val postScrapDateTextButton = "postScrapDateTextButton"
    const val postPostDateTextButton = "postPostDateTextButton"
    const val postKeywordTextButton = "postKeywordTextButton"
    const val postAppBarOrderText = "postAppBarOrderText"
    const val postItem = "postItem"
    const val postItemHeader = "postItemHeader"
    //postSearchTest
    const val moveToPostSearchIcon = "postSearchIcon"
    const val postSearchAppBar = "postSearchAppBar"
    const val postSearchItem = "postSearchItem"
    const val postSearchResultNullText = "postSearchResultNullText"
    const val postSearchItemTitle = "postSearchItemTitle"
    const val postSearchItemDescription = "postSearchItemDescription"
    //postDetailTest
    const val postDetailItem = "postDetailItem"
    const val postDetailBackButton = "postDetailBackButton"
    const val postDeleteButton = "postDeleteButton"
    //postWebViewTest
    const val postLinkButton = "postLinkButton"
    const val postWebViewBackButton = "postWebViewBackButton"
    const val postWebView = "postWebView"
    //postEditTest
    const val postEditItem = "postEditItem"
    const val postEditButton = "postEditButton"
    const val postEditBackButton = "postEditBackButton"
    const val postEditTitleTextField = "postEditTitleTextField"
    const val postEditDescriptionTextField = "postEditDescriptionTextField"
    const val postEditSaveButton = "postEditSaveButton"
}