...
                    .align(Alignment.TopEnd)
                    .padding(10.dp)
                    .testTag(TestTags.blogSearchItemLinkIcon)
            ) {
                Icon(
                    imageVector = Icons.Default.TurnedIn,
                    contentDescription = "scrapped icon",
                    tint = MaterialTheme.colors.primary
                )
            }
        }

    }
...
